ajout d'un favicon et petit nettoyage du main.js

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js" integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ==" crossorigin="anonymous"></script>
     <script src="js/main.js" defer></script>
 
+    <link rel="icon" type="image/png" href="heart.png" />
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
